# afrotech-connect-and-control

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
demos-no-framework/: .mcp.json  API_INTEGRATION.md  FASTAPI_README.md  NEXTJS_EXAMPLE.md  NEXTJS_IMPLEMENTATION.md  QUICKSTART.md  main.py  mcp_client.py  mcp_server.py  pyproject.toml  requirements.txt  test_api.py  test_client_roots.py  test_complete.py  test_full_integration.py  test_mcp.py  test_query.py  test_query_random_user.py  test_random_user.py  test_randomuser_api.py  test_roots.py  test_sampling.py
demos-no-framework/.serena/: project.yml
demos-no-framework/.serena/memories/: code_style_and_conventions.md  design_patterns_and_guidelines.md  project_overview.md  project_structure.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
demos-no-framework/data/: users.json
demos-no-framework/mcp-chat-app/: .env.example  README.md  SETUP.md  package-lock.json  package.json
demos-no-framework/mcp-chat-app/app/: globals.css  layout.tsx  page.tsx
demos-no-framework/mcp-chat-app/components/: Chat.tsx  UserList.tsx
demos-no-framework/mcp-chat-app/lib/: api.ts
demos-no-framework/mcp-chat-app/types/: index.ts
