[project]
name = "mcp-workshop"
version = "0.0.1"
description = "AfroTech MCP Workshop"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Melvin Hillsman", email = "mhillsma@redhat.com" },
]
keywords = ["mcp", "afrotech"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache2 License",
    "Operating System :: OS Independent",
]
dependencies = [
    "agno>=2.0.4",
    "ddgs>=9.6.0",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.36.0",
    "groq>=0.31.1",
    "lancedb>=0.25.0",
    "matplotlib>=3.10.6",
    "mpremote>=1.26.1",
    "openai>=1.108.0",
    "paho-mqtt>=2.1.0",
    "pandas>=2.3.3",
    "psycopg>=3.2.10",
    "pygithub>=2.8.1",
    "pypdf>=6.0.0",
    "sqlalchemy>=2.0.43",
    "tantivy>=0.25.0",
    "textual[syntax]>=6.2.1",
    "textual-dev>=1.7.0",
    "mcp[cli]>=1.17.0",
]

[project.optional-dependencies]
dev = ["mypy", "ruff", "pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]

[tool.ruff]
line-length = 120
exclude = [".venv*"]
[tool.ruff.lint.per-file-ignores]
# Ignore `F401` (import violations) in all `__init__.py` files
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "nest_asyncio.*", "agno.*", "requests.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true

[tool.uv.workspace]
members = ["demos-no-framework"]
